# GJE-CUDA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  main.cu  matrix_utils.cpp  matrix_utils.cu  matrix_utils.cuh  matrix_utils.h  readMe.md  test.py  test_result.txt
